name:                agda2mlf
version:             0.1.0.0
synopsis:            -
description:         Agda to Ocaml
license:             BSD3
license-file:        LICENSE
author:              Jan Mas Rovira, Frederik Hanghøj Iversen
maintainer:          janmasrovira@gmail.com, hanghj@student.chalmers.se
copyright:           Jan Mas Rovira, Frederik Hanghøj Iversen
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Malfunction.AST
                     , Malfunction.Print
                     , Compiler
                     , Test
                     , Backend
  build-depends:       base >= 4.7 && < 5
                     , Agda >= 2.5.2
                     , containers == 0.5.*
                     , mtl == 2.2.*
                     , process == 1.4.*
                     , temporary == 1.2.*
  default-language:    Haskell2010

executable agda2mlf
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , agda2mlf
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       CompilerTest
  main-is:             Tasty.hs
  build-depends:       base
                     , agda2mlf
                     , Agda
                     , tasty-discover == 1.1.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: git@gitlab.com:janmasrovira/agda2mlf.git
