name:                agda2mlf
version:             0.1.0.0
synopsis:            -
description:         Agda to Ocaml
license:             BSD3
license-file:        LICENSE
author:              Jan Mas Rovira, Frederik Hanghøj Iversen
maintainer:          janmasrovira@gmail.com, hanghj@student.chalmers.se
copyright:           Jan Mas Rovira, Frederik Hanghøj Iversen
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/full
  exposed-modules:     Agda.Compiler.Malfunction.AST
                     , Agda.Compiler.Malfunction.Run
                     , Agda.Compiler.Malfunction.Compiler
                     , Agda.Compiler.Malfunction.Main
                     , Agda.Compiler.Malfunction
                     , Agda.Compiler.Malfunction.Primitive
                     , Agda.Compiler.Malfunction.Instances
  build-depends:       Agda >= 2.5.2
                     , base >= 4.7 && < 5
                     , containers == 0.5.*
                     , extra == 1.5.*
                     , filepath == 1.4.*
                     , mtl == 2.2.*
                     , pretty == 1.1.*
                     , process == 1.4.*
                     , temporary == 1.2.*
                     , uniplate == 1.6.*
  default-language:    Haskell2010

test-suite agda2mlf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/agda2mlf
  other-modules:       CompilerTest
                     , Utils
  main-is:             Tasty.hs
  build-depends:       Agda
                     , agda2mlf
                     , base
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , extra == 1.5.*
                     , filepath == 1.4.*
                     , tasty == 0.11.*
                     , tasty-golden == 2.3.*
                     , tasty-hunit == 0.9.*
                     , directory == 1.3.*
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable agda2mlf-bench
  hs-source-dirs:      benchmark/agda2mlf
  other-modules:      RedBlack
                    , Typed
                    , TypedExist
                    , Untyped
                    , AgdaListGen
  main-is:            Main.hs
  build-depends:
                     base
                     , directory == 1.3.*
                     , process == 1.4.*
  default-language:    Haskell2010


source-repository head
  type:     git
  location: git@gitlab.com:janmasrovira/agda2mlf.git
