name:            lib
version:         0.12
cabal-version:   >= 1.8
build-type:      Simple
description:     Helper programs.
license:         MIT
tested-with:     GHC == 7.10.3

executable GenerateEverything
  hs-source-dirs:   .
  main-is:          GenerateEverything.hs
  build-depends:      base >= 4.6.0.1 && < 4.10
                    , filemanip >= 0.3.6.2 && < 0.4
                    , filepath >= 1.3.0.1 && < 1.5

executable AllNonAsciiChars
  hs-source-dirs:   .
  main-is:          AllNonAsciiChars.hs
  build-depends:      base >= 4.6.0.1 && < 4.10
                    , filemanip >= 0.3.6.2 && < 0.4
